--- a/style.css
+++ b/style.css
@@ -10,14 +10,14 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 700px;
+    height: 500px;
     margin: 0;
 
 }
 
 button {
 
-    background-color: rgb(155, 23, 34);
+    background-color: rgb(0 127 90);
 
     color: white;
 
@@ -30,4 +30,14 @@ button {
     padding: 3px;
 
 
+}
+
+.passo {
+ display: none;
+
+}
+
+.passo.ativo {
+
+    display: block;
 }
