--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ button {
     padding: 3px;
 
 
+
 }
 
 .passo {
@@ -40,4 +41,17 @@ button {
 .passo.ativo {
 
     display: block;
+}
+
+main {
+text-align: center;
+max-width: 90%;
+
+}
+
+img {
+
+max-width: 97%;
+
+}
 }
